--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="../node_modules/materialize-css/dist/js/materialize.min.js"></script>
+<!--    <script type="text/javascript"-->
+<!--            src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
   </body>
 </html>
