--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,6 @@
 
     <title>Serching</title>
   </head>
-  <body>
-    <div id="root"></div>
-<!--    <script type="text/javascript"-->
-<!--            src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
+  <body id="root">
   </body>
 </html>
